[package]
authors = ["jspspike <jspspike@gmail.com>"]
edition = "2018"
name = "snake"
version = "0.1.0"

[dependencies]
rand = "0.7.2"
sfml = { version = "0.15.1", optional = true }
indexmap = "1.3.2"

[dev-dependencies]
criterion = "0.3.0"

[features]
display = ["sfml"]

[[example]]
name = "game"
required-features = ["display"]

[[bench]]
name = "snake"
harness = false
