[package]
authors = ["jspspike <jspspike@gmail.com>"]
edition = "2018"
name = "snake-rs"
version = "0.1.1"
description = "A library to handle the logic for the classic game snake"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/jspspike/snake"
keywords = ["game", "snake", "api"]
categories = ["command-line-utilities", "game-engines", "games"]

[lib]
path = "src/lib.rs"
name = "snake"

[dependencies]
rand = "0.7.2"
sfml = { version = "0.15.1", optional = true }
indexmap = "1.3.2"

[dev-dependencies]
criterion = "0.3.0"

[features]
display = ["sfml"]

[[example]]
name = "game"
required-features = ["display"]

[[bench]]
name = "snake"
harness = false
